Se definen areas de contenido, se crea seccion de navegacion y se da estilos a navegacion para dispositivos movil

--- a/index.html
+++ b/index.html
@@ -8,6 +8,19 @@
     <title>Index</title>
 </head>
 <body>
-    
+    <main class="main">
+        <section class="main_hero">
+            <nav class="main_nav container">
+                <img src="src/icon-hamburger.svg" class="main_hamburger" alt="">
+                <img src="src/logo.svg" class="main_logo" alt="">
+                <ul class="main_links">
+                    <li class="main_list"><a href="" class="main_link"></a>Home</li>
+                    <li class="main_list"><a href="" class="main_link"></a>Shop</li>
+                    <li class="main_list"><a href="" class="main_link"></a>About</li>
+                    <li class="main_list"><a href="" class="main_link"></a>Contact</li>
+                </ul>
+            </nav>
+        </section>
+    </main>
 </body>
 </html>
