Se agregancontroles para futuro carrousel de imagenes

--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
                 </ul>
             </nav>
         </section>
+        <div class="main_controls">
+            <img src="src/icon-angle-left.svg" alt="" srcset="" class="main_control">
+            <img src="src/icon-angle-right.svg" alt="" srcset="" class="main_control">
+        </div>
     </main>
 </body>
 </html>
