Agregando seccion de compra

--- a/index.html
+++ b/index.html
@@ -25,6 +25,13 @@
             <img src="src/icon-angle-left.svg" alt="" srcset="" class="main_control">
             <img src="src/icon-angle-right.svg" alt="" srcset="" class="main_control">
         </div>
+        <section class="main_buy container">
+            <div class="main_content">
+                <h2 class="main_title">Discover innovative</h2>
+                <p class="main_paragraph">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quibusdam consequatur consequuntur nostrum officiis? Odio vero eum aut fugiat doloribus quae aliquid laudantium totam autem doloremque. Repellat dolorem eum quo fugiat?</p>
+                <a href="" class="main_cta">Shop Now <img src="src/icon-arrow.svg" alt="" class="main_paragraph"></a>
+            </div>
+        </section>
     </main>
 </body>
 </html>
