Agregando estilos a seccion de compra

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div class="main_content">
                 <h2 class="main_title">Discover innovative</h2>
                 <p class="main_paragraph">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quibusdam consequatur consequuntur nostrum officiis? Odio vero eum aut fugiat doloribus quae aliquid laudantium totam autem doloremque. Repellat dolorem eum quo fugiat?</p>
-                <a href="" class="main_cta">Shop Now <img src="src/icon-arrow.svg" alt="" class="main_paragraph"></a>
+                <a href="" class="main_cta">Shop Now <img src="src/icon-arrow.svg" alt="" class="main_arrow"></a>
             </div>
         </section>
     </main>
