--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                 <a href="" class="main_cta">Shop Now <img src="src/icon-arrow.svg" alt="" class="main_arrow"></a>
             </div>
         </section>
+        <div class="main_bg"></div>
     </main>
 </body>
 </html>
