Se crea seccion de about e imagen decorativa, se les asigan estilos y alineacion

--- a/index.html
+++ b/index.html
@@ -33,6 +33,15 @@
             </div>
         </section>
         <div class="main_bg"></div>
+        <section class="main_about container">
+            <div class="main_content">
+                <h3 class="main_title">About</h3>
+                <p class="main_paragraph main_paragraph--about">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam saepe dicta quam, libero molestias molestiae nostrum provident doloremque numquam. Autem quo ratione assumenda debitis laborum natus et culpa voluptate, voluptatum repellat saepe delectus sit? Ab optio facilis dicta quia ducimus, totam ratione veniam labore eos expedita sint architecto ea incidunt.
+                </p>
+            </div>
+        </section>
+        <div class="main_bg main_bg--second"></div>
     </main>
 </body>
 </html>
