Se corrige error sintactico en enlaces, texto se encontraba fuera de etiquetas

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
                 <img src="src/icon-hamburger.svg" class="main_hamburger" alt="">
                 <img src="src/logo.svg" class="main_logo" alt="">
                 <ul class="main_links">
-                    <li class="main_list"><a href="" class="main_link"></a>Home</li>
-                    <li class="main_list"><a href="" class="main_link"></a>Shop</li>
-                    <li class="main_list"><a href="" class="main_link"></a>About</li>
-                    <li class="main_list"><a href="" class="main_link"></a>Contact</li>
+                    <li class="main_list"><a href="" class="main_link">Home</a></li>
+                    <li class="main_list"><a href="" class="main_link">Shop</a></li>
+                    <li class="main_list"><a href="" class="main_link">About</a></li>
+                    <li class="main_list"><a href="" class="main_link">Contact</a></li>
                 </ul>
             </nav>
         </section>
