se corrige estado inicial de menu en dispositivos portatiles

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                     <img src="src/icon-hamburger.svg" class="main_hamburger" id="hamburger" alt="">
                     <img src="src/logo.svg" class="main_logo" alt="">
                 </div>
-                <ul class="main_links main_links_show" id="main_menu">
+                <ul class="main_links" id="main_menu">
                     <li class="main_list"><a href="" class="main_link">Home</a></li>
                     <li class="main_list"><a href="" class="main_link">Shop</a></li>
                     <li class="main_list"><a href="" class="main_link">About</a></li>
